
* Bug fixes, etc.

    - Fixed details in the 2-pp.t test file.
    - Now recognizes text files that aren't picked up by the -T operator
      but by the "file" tool.
    - Applied Roderich Schupp's patch to 30-current_exec.t to fix a
      path issue.
    - Now requiring Module::ScanDeps 0.60 which fixes a couple of bugs
      which might be observed as PAR bugs.

[Changes for 0.93 - May 19, 2006]

* New Features

    - Added support for PAR_TMPDIR (PAR_GLOBAL_TMPDIR) so that the
      temp directory can be controlled for just the PAR file bits.
      (Leolo)
    - Added par_current_exec_proc() which finds the file of the current
      executable in /proc, if possible. (Leolo)
    - Added par_current_exec() which finds he file of the current
      executable, if possible on this OS. (Leolo)
    - par_findprog() now uses par_current_exec() if possible.

* Bug Fixes, etc.

    - Upgraded to Module::Install 0.62+ (Audrey Tang, Steffen Mueller)
    - Document a strange interaction with chdir() and relative
      paths. (Chris Dolan)
    - Documented the bits that make up PAR_TEMP. (Leolo)
    - Fixed the call to par_findprog. path (aka val) was set to
      tmpdir. (Leolo)
    - Documented the CACHE name at the end of a self-executing
      PAR. (Leolo)
    - myldr/Makefile.PL now generates some dependencies for
      main.c (Leolo)
    - Applied patch from RT ticket. (tsee)
      https://rt.cpan.org/Ticket/Display.html?id=13959
    - Applied Ivan Kudryavtsev's patch that fixes a couple of calls
      to PAR subroutines in PatchContent filtered code. (tsee)

[Changes for 0.92 - February 22, 2006]

* Bug Fixes

    - Now requiring Module::ScanDeps 0.56 which handles autouse
      correctly.
    - Now shipping with a correct SIGNATURE. (Which was broken for
      0.91.)

[Changes for 0.91 - February 13, 2006]

* Bug Fixes

    - Applied Alan Stewart's patch which fixes @ARGV pollution in
      daughter programs. See also 